--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-cli": "^6.11.4",
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-async-to-generator": "^6.16.0",
     "babel-preset-es2015": "^6.9.0",
     "chunk-manifest-webpack-plugin": "^0.1.0",
     "css-loader": "^0.23.1",
@@ -28,9 +29,11 @@
     "fix-moduleid-and-chunkid-plugin": "^0.1.1",
     "glob": "^7.0.5",
     "imports-loader": "^0.6.5",
+    "install": "^0.8.1",
     "json-loader": "^0.5.4",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "npm": "^3.10.9",
     "path": "^0.12.7",
     "serve-index": "^1.8.0",
     "style-loader": "^0.13.1",
