--- a/src/Topxia/AdminBundle/Resources/config/menus_admin.yml
+++ b/src/Topxia/AdminBundle/Resources/config/menus_admin.yml
@@ -516,23 +516,30 @@ admin:
             visable: (not (setting('copyright.thirdCopyright', false) == 1) and not is_without_network()) #第三方授权和无网情况下不显示教育云
             children:
                 admin_my_cloud:
-                    name: 账户概览
+                    name: 教育云概览
                     children:
                         admin_my_cloud_overview:
-                            name: 账户概览
+                            name: 教育云概览
                             disable: true
                 admin_cloud_video_setting:
-                    name: 云视频设置
+                    name: 云视频
                     router_name: admin_setting_cloud_video
                     children:
                         admin_setting_cloud_video:
-                            name: 云视频设置
+                            name: 云视频
+                            disable: true
+                admin_cloud_edulive_setting:
+                    name: 云直播
+                    router_name: admin_setting_cloud_edulive
+                    children:
+                        admin_setting_cloud_edulive:
+                            name: 云直播
                             disable: true
                 admin_edu_cloud_sms:
-                    name: 云短信设置
+                    name: 云短信
                     children:
                         admin_edu_cloud_sms_setting:
-                            name: 云短信设置
+                            name: 云短信
                             router_name: admin_edu_cloud_sms
                             disable: true
                 # admin_edu_cloud_email:
@@ -542,7 +549,7 @@ admin:
                 #             name: 云邮件设置
                 #             router_name: admin_edu_cloud_email
                 admin_edu_cloud_search_setting:
-                    name: 云搜索设置
+                    name: 云搜索
                     children:
                         admin_edu_cloud_search:
                             name: 云搜索
