--- a/src/Topxia/AdminBundle/Resources/config/routing.yml
+++ b/src/Topxia/AdminBundle/Resources/config/routing.yml
@@ -1887,3 +1887,13 @@ admin_cloud_attachment_render:
     pattern: /cloud_attachment/render
     defaults: { _controller: TopxiaAdminBundle:CloudAttachment:render }
     permissions: [admin_cloud_attachment_manage]
+
+# 添加云直播
+admin_setting_cloud_edulive:
+    pattern:  /setting/cloud/edulive
+    defaults: { _controller: TopxiaAdminBundle:EduCloud:live }
+
+# 添加重建索引模态框
+admin_cloud_buildindex_modal:
+    pattern:  /setting/cloud/buildindex/modal
+    defaults: { _controller: TopxiaAdminBundle:EduCloud:modal }
