--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,7 +7,7 @@ imports:
 
 framework:
     # esi:             ~
-    # translator:      { fallback: "%locale%" }
+    # translator:      { fallback: "%locale%", logging: false }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -24,6 +24,7 @@ framework:
     fragments:       ~
     http_method_override: true
     assets: %assets%
+
 
 # Twig Configuration
 twig:
