修复asset webpack配置问题

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -18,12 +18,14 @@ framework:
     validation:      { enable_annotations: true }
     templating:
         engines: ['twig']
-        assets_version: 7.2.9
+        # assets_version: 7.2.9
     default_locale:  "%locale%"
     trusted_proxies: ~
     session:
         handler_id:  session.handler.factory
     fragments:       ~
+    http_method_override: true
+    assets: "%assets%"
 
 # Twig Configuration
 twig:
