--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -25,7 +25,7 @@ framework:
     fragments:       ~
     http_method_override: true
     assets:
-        version: '7.2.12'
+        #version: '7.2.12'
         packages:
             webpack:
                 base_urls:
