--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "less-loader": "^2.2.3",
     "npm": "^3.10.9",
     "path": "^0.12.7",
+    "perfect-scrollbar": "^0.6.13",
     "serve-index": "^1.8.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
