--- a/src/Topxia/WebBundle/Resources/config/routing.yml
+++ b/src/Topxia/WebBundle/Resources/config/routing.yml
@@ -2,6 +2,10 @@ homepage:
     path:  /
     defaults: { _controller: TopxiaWebBundle:Default:index }
 
+test:
+    path:  /test
+    defaults: { _controller: TopxiaWebBundle:Test:test }
+
 webpack_test:
     path:  /webpack_test
     defaults: { _controller: TopxiaWebBundle:Default:webpackTest }
