--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "bootstrap-datepicker-webpack": "^1.7.0-dev",
+    "bootstrap-datetimepicker": "0.0.7",
     "bootstrap-notify": "^3.1.3",
     "ckeditor": "^4.5.10",
     "font-awesome": "^4.6.3",
