--- a/src/Codeages/PluginBundle/Resources/config/services.yml
+++ b/src/Codeages/PluginBundle/Resources/config/services.yml
@@ -34,3 +34,14 @@ services:
             - "@codeages_plugin.dict_collector"
         tags:
             - { name: twig.extension }
+
+    codeages_plugin.theme.file_locator:
+        class:          Codeages\PluginBundle\Locator\ThemeFileLocator
+        arguments:      ['@kernel', '%kernel.root_dir%/Resources']
+
+    codeages_plugin.theme.templating.locator:
+        class:          "%templating.locator.class%"
+        arguments:      ['@codeages_plugin.theme.file_locator', '%kernel.cache_dir%']
+
+    templating.locator:
+        alias:          codeages_plugin.theme.templating.locator
