--- a/src/Topxia/WebBundle/Resources/config/services.yml
+++ b/src/Topxia/WebBundle/Resources/config/services.yml
@@ -39,13 +39,13 @@ services:
         class:          Topxia\WebBundle\Util\TargetHelper
         arguments:      ['@service_container']
 
-    topxia.file_locator:
-        class:          Topxia\WebBundle\Theme\FileLocator
-        arguments:      ['@kernel', '%kernel.root_dir%/Resources']
+    # topxia.file_locator:
+    #     class:          Topxia\WebBundle\Theme\FileLocator
+    #     arguments:      ['@kernel', '%kernel.root_dir%/Resources']
     # file_locator:
     #     alias:          topxia.file_locator
-    topxia.templating.locator:
-        class:          "%templating.locator.class%"
-        arguments:      ['@topxia.file_locator', '%kernel.cache_dir%']
+    # topxia.templating.locator:
+    #     class:          "%templating.locator.class%"
+    #     arguments:      ['@topxia.file_locator', '%kernel.cache_dir%']
     # templating.locator:
     #     alias:          topxia.templating.locator
