--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ npm-debug.log
 /app/config/windid_client_config.php
 /app/config/routing_plugins.yml
 /plugins/*
+!/plugins/.gitkeep
 /build/
 /bin/
 !/bin/phpmig
