--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-transform-async-to-generator": "^6.16.0",
     "babel-preset-es2015": "^6.9.0",
     "chunk-manifest-webpack-plugin": "^0.1.0",
+    "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.23.1",
     "eslint": "^3.3.0",
     "eslint-config-airbnb-base": "^5.0.1",
