--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
+    "webpack-notifier": "^1.4.1",
     "winston": "^2.2.0",
     "yargs": "^4.8.1"
   },
