--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "moment": "^2.15.1",
     "reset.css": "^2.0.2",
     "respond.js": "^1.4.2",
-    "es6-event-emitter": "^1.5.2"
+    "es6-event-emitter": "^1.5.2",
+    "swfobject": "2.2.1"
   },
   "scripts": {
     "start": "npm run dev",
