--- a/src/Topxia/AdminBundle/Resources/config/routing.yml
+++ b/src/Topxia/AdminBundle/Resources/config/routing.yml
@@ -250,6 +250,14 @@ admin_tag_group_update:
     pattern: /tag/group/{groupId}/update
     defaults: { _controller: TopxiaAdminBundle:TagGroup:update }
 
+admin_tag_group_checkname:
+    pattern: /tag/group/checkname
+    defaults: { _controller: TopxiaAdminBundle:TagGroup:checkName }
+
+admin_tag_group_delete:
+    pattern: /tag/group/{tagId}/delete
+    defaults: { _controller: TopxiaAdminBundle:TagGroup:delete }
+
 admin_user:
     pattern:  /user
     defaults: { _controller: TopxiaAdminBundle:User:index }
