video activity support cloud video and local video player

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "reset.css": "^2.0.2",
     "respond.js": "^1.4.2",
     "es6-event-emitter": "^1.5.2",
-    "swfobject": "2.2.1"
+    "swfobject": "^2.2.1"
   },
   "scripts": {
     "start": "npm run dev",
