--- a/src/WebBundle/Resources/config/routing.yml
+++ b/src/WebBundle/Resources/config/routing.yml
@@ -33,6 +33,10 @@ course_task_trigger:
   defaults: { _controller: WebBundle:Task:trigger }
   methods: [POST]
 
+course_task_player:
+    path:  /course/{courseId}/task/{taskId}/player
+    defaults: { _controller: WebBundle:Task:player }
+
 media_materiallib_choose:
     path: /media/materiallib/choose
     defaults: { _controller: WebBundle:FileChooser:materialChoose }
