--- a/src/Topxia/AdminBundle/Resources/config/menus_admin.yml
+++ b/src/Topxia/AdminBundle/Resources/config/menus_admin.yml
@@ -364,7 +364,7 @@ admin:
                     name: 小组话题管理
                     children:
                         admin_operation_group_manage:
-                            name: 小组话题管理
+                            name: 小组管理
                             disable: true
                             router_name: admin_group
                             children:
@@ -374,7 +374,7 @@ admin:
                                     group: topBtn
                                     blank: 1
                         admin_operation_group_thread:
-                            name: 话题管理
+                            name: 小组话题管理
                             disable: true
                             router_name: admin_groupThread
                 admin_operation_invite:
