--- a/src/Topxia/WebBundle/Resources/config/routing.yml
+++ b/src/Topxia/WebBundle/Resources/config/routing.yml
@@ -328,6 +328,10 @@ live_classroom_url:
     pattern:  /course/{courseId}/lesson/{lessonId}/get_classroom_url
     defaults: { _controller: TopxiaWebBundle:LiveCourse:getClassroomUrl }
 
+live_classroom_es_replay_play_url:
+    pattern: /course/{courseId}/lesson/{lessonId}/replay/{courseLessonReplayId}/play_es_live_replay
+    defaults: { _controller: TopxiaWebBundle:LiveCourse:playESLiveReplay }
+
 live_classroom_replay_url:
     pattern: /course/{courseId}/lesson/{lessonId}/replay/{courseLessonReplayId}/get_replay_url
     defaults: { _controller: TopxiaWebBundle:LiveCourse:getReplayUrl }
@@ -822,6 +826,13 @@ course_manage_lesson_file_status:
     pattern:  /course/{id}/manage/lesson/fileStatus
     defaults: { _controller: TopxiaWebBundle:CourseLessonManage:fileStatus }
 
+course_manage_lesson_batch_modal:
+    pattern:  /course/{id}/manage/lesson/batch/modal
+    defaults: { _controller: TopxiaWebBundle:CourseLessonManage:batchLessonModal }
+
+course_manage_lesson_create_from_file:
+    pattern:  /course/{id}/manage/lesson/create/from/file
+    defaults: { _controller: TopxiaWebBundle:CourseLessonManage:createFromFile }
 
 course_draft_create:
     pattern:  /course/draft/create
