--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "bootstrap-datetime-picker": "2.3.10",
     "bootstrap-notify": "^3.1.3",
     "ckeditor": "^4.5.10",
+    "es-swfobject": "^3.0.0",
     "es6-event-emitter": "^1.5.2",
     "font-awesome": "^4.6.3",
     "html5shiv": "^3.7.3",
