--- a/package.json
+++ b/package.json
@@ -51,15 +51,15 @@
     "bootstrap-datetime-picker": "2.3.10",
     "bootstrap-notify": "^3.1.3",
     "ckeditor": "^4.5.10",
+    "es6-event-emitter": "^1.5.2",
     "font-awesome": "^4.6.3",
     "html5shiv": "^3.7.3",
+    "iframe-resizer": "^3.5.5",
     "jquery": "^1.12.4",
     "jquery-form": "^3.50.0",
     "jquery-validation": "^1.15.1",
-    "moment": "^2.15.1",
     "reset.css": "^2.0.2",
-    "respond.js": "^1.4.2",
-    "es6-event-emitter": "^1.5.2"
+    "respond.js": "^1.4.2"
   },
   "scripts": {
     "start": "npm run dev",
