--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "jquery-sortable": "^0.9.13",
     "jquery-validation": "^1.15.1",
     "reset.css": "^2.0.2",
-    "respond.js": "^1.4.2"
+    "respond.js": "^1.4.2",
+    "screenfull": "^3.0.2"
   },
   "scripts": {
     "start": "npm run dev",
