--- a/src/Topxia/WebBundle/Resources/config/routing.yml
+++ b/src/Topxia/WebBundle/Resources/config/routing.yml
@@ -2,10 +2,6 @@ homepage:
     path:  /
     defaults: { _controller: TopxiaWebBundle:Default:index }
 
-test:
-    path:  /test
-    defaults: { _controller: TopxiaWebBundle:Test:test }
-
 webpack_test:
     path:  /webpack_test
     defaults: { _controller: TopxiaWebBundle:Default:webpackTest }
@@ -182,6 +178,11 @@ attachment_list:
     defaults: { _controller: TopxiaWebBundle:Attachment:list }
     methods: [GET]
 
+attachment_item_show:
+    path: /attachment/file/{fileId}/show
+    defaults: { _controller: TopxiaWebBundle:Attachment:fileShow }
+    methods: [GET]
+
 attachment_preview:
     path: /attachment/{id}/preview
     defaults: { _controller: TopxiaWebBundle:Attachment:preview }
@@ -334,10 +335,6 @@ live_classroom_url:
 live_classroom_replay_url:
     path: /course/{courseId}/lesson/{lessonId}/replay/{courseLessonReplayId}/get_replay_url
     defaults: { _controller: TopxiaWebBundle:LiveCourse:getReplayUrl }
-
-live_classroom_es_replay_play_url:
-    pattern: /course/{courseId}/lesson/{lessonId}/replay/{courseLessonReplayId}/play_es_live_replay
-    defaults: { _controller: TopxiaWebBundle:LiveCourse:playESLiveReplay }
 
 live_course_manage_replay:
     path:  /livecourse/{id}/manage/replay
@@ -817,14 +814,6 @@ course_manage_lesson_create:
     path:  /course/{id}/manage/lesson/create
     defaults: { _controller: TopxiaWebBundle:CourseLessonManage:create }
 
-course_manage_lesson_batch_modal:
-    pattern:  /course/{id}/manage/lesson/batch/modal
-    defaults: { _controller: TopxiaWebBundle:CourseLessonManage:batchLessonModal }
-
-course_manage_lesson_create_from_file:
-    pattern:  /course/{id}/manage/lesson/create/from/file
-    defaults: { _controller: TopxiaWebBundle:CourseLessonManage:createFromFile }
-
 course_manage_lesson_file_status:
     path:  /course/{id}/manage/lesson/fileStatus
     defaults: { _controller: TopxiaWebBundle:CourseLessonManage:fileStatus }
@@ -890,13 +879,13 @@ question_file_url:
     path: /question_ajax/file_url
     defaults: { _controller: TopxiaWebBundle:Question:fileUrl }
 
-course_manage_question:
-    path: /course/{courseId}/manage/question
-    defaults: { _controller: TopxiaWebBundle:CourseQuestionManage:index }
+# course_manage_question:
+#     path: /course/{courseId}/manage/question
+#     defaults: { _controller: TopxiaWebBundle:CourseQuestionManage:index }
 
-course_manage_question_create:
-    path: /course/{courseId}/manage/question/create/{type}
-    defaults: { _controller: TopxiaWebBundle:CourseQuestionManage:create }
+# course_manage_question_create:
+#     path: /course/{courseId}/manage/question/create/{type}
+#     defaults: { _controller: TopxiaWebBundle:CourseQuestionManage:create }
 
 course_manage_question_update:
     path: /course/{courseId}/manage/question/{id}/update
@@ -1040,9 +1029,9 @@ course_manage_testpaper_items:
     path: /course/{courseId}/manage/testpaper/{testpaperId}/items
     defaults: { _controller: TopxiaWebBundle:CourseTestpaperManage:items }
 
-course_manage_testpaper_items_get:
-    path: /course/{courseId}/manage/testpaper/items_get
-    defaults: { _controller: TopxiaWebBundle:CourseTestpaperManage:itemsGet }
+# course_manage_testpaper_items_get:
+#     path: /course/{courseId}/manage/testpaper/items_get
+#     defaults: { _controller: TopxiaWebBundle:CourseTestpaperManage:itemsGet }
 
 course_manage_testpaper_items_reset:
     path: /course/{courseId}/manage/testpaper/{testpaperId}/items_reset
