--- a/src/Topxia/WebBundle/Resources/config/routing.yml
+++ b/src/Topxia/WebBundle/Resources/config/routing.yml
@@ -358,7 +358,7 @@ live_capacity:
 
 course_explore:
     pattern:  /course/explore/{category}
-    defaults: { _controller: TopxiaWebBundle:Course:explore, category:'0' }
+    defaults: { _controller: TopxiaWebBundle:Explore:course, category:'' }
 
 course_archive:
     pattern:  /archive/course
