--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -15,10 +15,10 @@
 
     <testsuites>
         <testsuite name="Project Test Suite">
-<!--             <directory>../src/Classroom/Service/Classroom/Tests</directory>
+            <directory>../src/Classroom/Service/Classroom/Tests</directory>
             <directory>../src/Topxia/Common/Tests</directory>
-            <directory>../src/Topxia/Component/*/Tests</directory> -->
-            <directory>../src/Topxia/Service/Taxonomy/Tests</directory>
+            <directory>../src/Topxia/Component/*/Tests</directory>
+            <directory>../src/Topxia/Service/*/Tests</directory>
         </testsuite>
     </testsuites>
 
