--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "chunk-manifest-webpack-plugin": "^0.1.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.23.1",
     "eslint": "^3.3.0",
     "eslint-config-airbnb-base": "^5.0.1",
@@ -37,20 +38,25 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
+    "webpack-notifier": "^1.4.1",
     "winston": "^2.2.0",
     "yargs": "^4.8.1"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "bootstrap-daterangepicker": "^2.1.24",
     "bootstrap-notify": "^3.1.3",
-    "ckeditor": "^4.5.10",
+    "echarts": "^3.3.1",
+    "es-ckeditor": "^1.0.0",
     "font-awesome": "^4.6.3",
     "html5shiv": "^3.7.3",
     "jquery": "^1.12.4",
     "jquery-form": "^3.50.0",
     "jquery-validation": "^1.15.1",
+    "moment": "^2.16.0",
     "reset.css": "^2.0.2",
-    "respond.js": "^1.4.2"
+    "respond.js": "^1.4.2",
+    "typeahead.js": "^0.11.1"
   },
   "scripts": {
     "start": "npm run dev",
