--- a/src/Topxia/WebBundle/Resources/config/routing.yml
+++ b/src/Topxia/WebBundle/Resources/config/routing.yml
@@ -1174,6 +1174,10 @@ course_lesson_question_marker_search:
     pattern:  /course/{courseId}/lesson/{lessonId}/question_marker/search
     defaults: { _controller: TopxiaWebBundle:QuestionMarker:search }
 
+media_play:
+    pattern:  /media/{mediaId}/play
+    defaults: { _controller: TopxiaWebBundle:Media/Index:play }
+
 media_subtitle_manage:
     pattern:  /media/{mediaId}/subtitles/manage
     defaults: { _controller: TopxiaWebBundle:Subtitle:manage }
