--- a/src/Topxia/WebBundle/Resources/config/routing.yml
+++ b/src/Topxia/WebBundle/Resources/config/routing.yml
@@ -1178,6 +1178,10 @@ media_play:
     pattern:  /media/{mediaId}/play
     defaults: { _controller: TopxiaWebBundle:Media/Index:play }
 
+media_preview:
+    pattern:  /media/{mediaId}/preview
+    defaults: { _controller: TopxiaWebBundle:Media/Index:preview }
+
 media_subtitle_manage:
     pattern:  /media/{mediaId}/subtitles/manage
     defaults: { _controller: TopxiaWebBundle:Subtitle:manage }
